--- a/hub/package.json
+++ b/hub/package.json
@@ -13,6 +13,8 @@
     "chance": "^1.1.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "random-word-by-length": "^0.1.0",
+    "random-words": "^1.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3"
   }
