--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,6 @@
 PORT=<your-port-here>
+
+# on the auth) applications page, scroll alllll the way down
+# then go to 'advanced settings'
+# then copy the 'JSON Web Key Set' and paste it here
+JWKS_URI=<your-uri-here>
