--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.1.5",
+    "random-words": "^1.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3"
   }
