--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "nodemon index.js"
+  },
   "dependencies": {
     "chance": "^1.1.9",
     "cors": "^2.8.5",
@@ -8,6 +11,7 @@
     "jwks-rsa": "^2.1.5",
     "random-words": "^1.2.0",
     "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3"
+    "socket.io-client": "^4.5.3",
+    "socketio-jwt": "^4.6.2"
   }
 }
