--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.1.5",
+    "nodemon": "^2.0.20",
     "random-words": "^1.2.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
