--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,12 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Visual Studio Code # 
+.vscode/* 
+.vscode/settings.json
+!.vscode/settings.json 
+!.vscode/tasks.json 
+!.vscode/launch.json 
+!.vscode/extensions.json 
+.history.vscode/settings.json
