--- a/.gitignore
+++ b/.gitignore
@@ -69,7 +69,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-.env
+**.env
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -103,11 +103,14 @@ dist
 # TernJS port file
 .tern-port
 
-# Visual Studio Code # 
-.vscode/* 
-.vscode/settings.json
-!.vscode/settings.json 
-!.vscode/tasks.json 
-!.vscode/launch.json 
-!.vscode/extensions.json 
-.history.vscode/settings.json
+### VisualStudioCode ###
+.vscode/*
+.vscode/**/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
